test/files/neg/wellkinded_wrongarity2.scala
// test well-kindedness checks
class Monad[m[x]]

object ms extends Monad[String]