test/files/neg/wellkinded_wrongarity2.check
wellkinded_wrongarity2.scala:4: error: type String takes no type parameters, expected: one
object ms extends Monad[String]
                        ^
one error found
